tests/bad/declare-write.pas
program declare_write;

function Write;
begin
    Write := 1
end;

begin
end.
